--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -16,10 +16,18 @@
       <p>Hi I'm a item</p>
 
     </div>
-    <img src="https://source.unsplash.com/random/300x300" />
+    <img class="nice" src="./25-500x500.jpg" />
     <p>Hi I'm a item</p>
     <p>Hi I'm a item</p>
   </div>
+  <script src="./the-dom.js"></script>
+  <script src="./creating.js"></script>
 </body>
 
 </html>
+
+<style>
+  .round {
+    border-radius: 50%;
+  }
+</style>
