--- a/exercises/34 - Click Outside/click-outside-FINISHED.html
+++ b/exercises/34 - Click Outside/click-outside-FINISHED.html
@@ -11,22 +11,22 @@
   <body>
     <div class="cards">
       <div class="card" data-description="Wes is cool">
-        <img src="https://picsum.photos/200?random=1" alt="Wes Bos">
+      <img src="../25-500x500.jpg" alt="Wes Bos">
         <h2>Wes Bos</h2>
         <button>Learn more →</button>
       </div>
       <div class="card" data-description="Scott is neat!">
-        <img src="https://picsum.photos/200?random=2" alt="Wes Bos">
+      <img src="../25-500x500.jpg" alt="Wes Bos">
         <h2>Scott Tolinski</h2>
         <button>Learn more →</button>
       </div>
       <div class="card" data-description="Kait is beautiful!">
-        <img src="https://picsum.photos/200?random=3" alt="Wes Bos">
+      <img src="../25-500x500.jpg" alt="Wes Bos">
         <h2>Kait Bos</h2>
         <button>Learn more →</button>
       </div>
       <div class="card" data-description="Snickers is a dog!">
-        <img src="https://picsum.photos/200?random=4" alt="Wes Bos">
+      <img src="../25-500x500.jpg" alt="Wes Bos">
         <h2>Snickers the dog</h2>
         <button>Learn more →</button>
       </div>
@@ -101,7 +101,7 @@
         transform: translateY(0);
       }
     </style>
-    <script src="./click-outside.js"></script>
+    <script src="./click-outside-FINISHED.js"></script>
   </body>
 
 </html>
