--- a/exercises/35 - Scroll To Accept/scroll-to-accept-FINISHED.html
+++ b/exercises/35 - Scroll To Accept/scroll-to-accept-FINISHED.html
@@ -97,7 +97,7 @@
           overflow: scroll;
         }
       </style>
-      <script src="./scroll-to-accept.js"></script>
+      <script src="./scroll-to-accept-FINISHED.js"></script>
     </body>
 
   </html>
