--- a/exercises/20 - The DOM/DOM-Cardio.html
+++ b/exercises/20 - The DOM/DOM-Cardio.html
@@ -10,6 +10,22 @@
 
 <body>
   <script src="./DOM-Cardio.js"></script>
-</body>
 
-</html>
+  <style>
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 20px;
+      padding: 20px;
+    }
+
+    .testCard {
+      background: white;
+      padding: 20px;
+    }
+
+    .testCard h2 {
+      color: black;
+    }
+  </style>
+</body>
